--- a/src/html/updates/great-news-channel-special/index.html
+++ b/src/html/updates/great-news-channel-special/index.html
@@ -4,7 +4,6 @@
 "title": "Обновление медиа канала Special"
 })
 <link rel="stylesheet" href="/css/page.css">
-<link rel="stylesheet" href="/css/page--new.css">
 
 <body>
 
@@ -60,7 +59,7 @@
                 <div style="max-width: 400px">
                     <h2>Поделиться статьей</h2>
                     <div class="list-group list-group-flush">
-                        <button type="button" class="list-group-item list-group-item-action">
+                        <button onClick="CopyLink()" type="button" class="list-group-item list-group-item-action">
                             Скопировать ссылку
                         </button>
                         <button type="button" class="list-group-item list-group-item-action">
