--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -112,6 +112,7 @@
 
 <script src="/js/theme.js"></script>
 <script src="/js/privacy.js"></script>
+<script src="/js/copylink.js"></script>
 <script src="/js/buttonback.js"></script>
 <script src="/js/popper.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
