work at archive

--- a/src/html/updates/great-news-channel-special/index.html
+++ b/src/html/updates/great-news-channel-special/index.html
@@ -62,16 +62,13 @@
                         <button onClick="CopyLink()" type="button" class="list-group-item list-group-item-action">
                             Скопировать ссылку
                         </button>
-                        <button type="button" class="list-group-item list-group-item-action">
+                        <button onClick="LinkToTelegram()" type="button" class="list-group-item list-group-item-action">
                             Телеграм
                         </button>
-                        <button type="button" class="list-group-item list-group-item-action">
+                        <button onClick="LinkToVK()" type="button" class="list-group-item list-group-item-action">
                             Вконтакте
                         </button>
-                        <button type="button" class="list-group-item list-group-item-action">
-                            Почта
-                        </button>
-                        <button type="button" class="list-group-item list-group-item-action">
+                        <button onClick="LinkToOK()" type="button" class="list-group-item list-group-item-action">
                             Одноклассники
                         </button>
                     </div>
