--- a/src/parts/p--main.html
+++ b/src/parts/p--main.html
@@ -1,10 +1,11 @@
 <div class="container container--main">
     <div class="row row-cols-1 row-cols-lg-1 gx-2 g-lg-3">
         <div class="col pb-3 mb-sm-0">
-            <a href="/tech/macbook-2017-review" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p013/cap.jpg" class="card-img" alt="Макбук 2017 года с открытой крышкой">
+            <a href="/updates/news-archive-share-design-update" class="card card--link card--rounded border-0">
+                <img src="/img/updates/update004.jpg" loading="lazy" class="card-img" alt="Главная страница медиа Special">
                 <div class="card-img-overlay card--bg-gradient d-flex">
-                    <p class="card-title text-white mt-auto card--title card--title-1">Обзор на макбук 2017 года</p>
+                    <p class="card-title text-white mt-auto card--title card--title-1">Архив новостей. «Поделиться». Обновление
+                        дизайна</p>
                 </div>
             </a>
         </div>
