new mobile menu

--- a/src/html/updates.html
+++ b/src/html/updates.html
@@ -16,6 +16,17 @@
 				<h1>Обновления Special</h1>
 			</div>
 			<div class="fs-5 mb-5">
+				<p class="text--more fs-6">Изменения 01.05.2023</p>
+				<ul>
+					<li>Исправление ошибок</li>
+					<li>Новый дизайн</li>
+					<li>Кнопка «назад»</li>
+					<li>Новый шрифт</li>
+					<li>Архив статьей.</li>
+				</ul>
+				<a href="/updates/news-archive-share-design-update/" class="link">Читать</a>
+			</div>
+			<div class="fs-5 mb-5">
 				<p class="text--more fs-6">Изменения 28.04.2023</p>
 				<ul>
 					<li>Исправление ошибок</li>
