--- a/src/parts/header-post.html
+++ b/src/parts/header-post.html
@@ -4,7 +4,7 @@
             <div class="col-md-3 mb-2 mb-md-0 header--logo-pc">
                 <div class="d-flex align-items-center">
 
-                    <div id="header__btn_back" class="header--btn-back">
+                    <div id="header__btn_back" class="header--btn-back d-none">
                         <a id="header__btn_back_link" href="">
                             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" class="link-icon--white" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd"
