--- a/src/parts/header.html
+++ b/src/parts/header.html
@@ -68,7 +68,7 @@
         </div>
 
         <!-- MOBILE -->
-        <div class="container d-flex flex-wrap align-items-center mb-4 justify-content-center header--logo-mobile">
+        <div class="container d-flex flex-wrap align-items-center justify-content-center header--logo-mobile">
 
             <a href="/write-post.html" id="mobilebtn_addpost" class="link-icon me-auto header--mobile-btn">
                 <svg xmlns="http://www.w3.org/2000/svg" class="header--mobile-button" viewBox="0 0 16 16">
@@ -111,7 +111,7 @@
                     <path fill-rule="evenodd"
                         d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
                 </svg>
-            </button>
+            </a>
 
 
         </div>
