--- a/src/html/games/rememberthesecards/index.html
+++ b/src/html/games/rememberthesecards/index.html
@@ -62,7 +62,7 @@
             <p class="post--more-text mb-0">19.03.23 12:00</p>
         </div>
 
-        @@include('../../../parts/p--more-2.html', {
+        @@include('../../../parts/p--more-post.html', {
             "active": "g-rememberthesecards"
         })
 
