--- a/src/html/more/index.html
+++ b/src/html/more/index.html
@@ -68,10 +68,29 @@
             </ul>
         </div>
         <div style="margin-bottom: 50px">
-            <h1>АРХИВ</h1>
-            <a href="/more/archive/" class="link fs-4">
-                Открыть
-            </a>
+            <h1>РАЗНОЕ</h1>
+            <ul class="fs-4">
+                <li>
+                    <a href="/more/archive/" class="link">
+                        Архив
+                    </a>
+                </li>
+                <li>
+                    <a href="/more/on-years.html" class="link">
+                        Подробка по годам
+                    </a>
+                </li>
+                <li>
+                    <a href="/more/best.html" class="link">
+                        Лучшее за 3 года
+                    </a>
+                </li>
+                <li>
+                    <a href="/more/important.html" class="link">
+                        Важные события
+                    </a>
+                </li>
+            </ul>
         </div>
 
     </main>
