--- a/src/html/p/how-I-develop-websites-in-php/index.html
+++ b/src/html/p/how-I-develop-websites-in-php/index.html
@@ -169,7 +169,7 @@
             <p class="post--more-text mb-0">06.02.23 12:00</p>
         </div>
 
-        @@include('../../../parts/p--more-2.html', {
+        @@include('../../../parts/p--more-post.html', {
         "active": "p-how-I-develop-websites-in-php"
         })
 
