--- a/src/html/p/how-to-sell-on-buy-markets/index.html
+++ b/src/html/p/how-to-sell-on-buy-markets/index.html
@@ -137,7 +137,7 @@
             <p class="post--more-text mb-0">16.04.23 14:00</p>
         </div>
 
-        @@include('../../../parts/p--more-3.html', {
+        @@include('../../../parts/p--more-post.html', {
         "active": "p-how-did-i-start-learning-programming"
         })
 
