--- a/src/html/tech/ipad-mini-4-is-an-ambiguous-device/index.html
+++ b/src/html/tech/ipad-mini-4-is-an-ambiguous-device/index.html
@@ -224,7 +224,7 @@
             <p class="post--more-text mb-0">25.03.23 12:00</p>
         </div>
 
-        @@include('../../../parts/p--more-1.html', {
+        @@include('../../../parts/p--more-post.html', {
         "active": "p-how-I-fight-against-burnout"
         })
 
