--- a/src/parts/p--main.html
+++ b/src/parts/p--main.html
@@ -16,7 +16,7 @@
     <div class="row row-cols-1 row-cols-lg-2 gx-3">
         <div class="col pb-3 mb-sm-0">
             <a href="/p/which-macbooks-are-really-worth-getting" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p014/cap.jpg" class="card-img" alt="Два макбука на столе">
+                <img src="/img/postsmin/p014.jpg" class="card-img" alt="Два макбука на столе">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Какие макбуки действительно стоит брать?</p>
                 </div>
@@ -24,7 +24,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/p/how-to-sell-on-buy-markets" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p016/cap.jpg" class="card-img" alt="Портмоне на фоне ноутбука">
+                <img src="/img/postsmin/p016.jpg" class="card-img" alt="Портмоне на фоне ноутбука">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Как успешно продавать на Б/У рынках
                     </p>
@@ -33,7 +33,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/tech/difference-in-macbooks-for-3-years" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p017/cap.jpg" class="card-img" alt="Макбук 2017 и 2014 стоят напротив">
+                <img src="/img/postsmin/p017.jpg" class="card-img" alt="Макбук 2017 и 2014 стоят напротив">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Разница в макбуках за 3 года</p>
                 </div>
@@ -41,7 +41,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/p/communication-with-clients-on-the-internet" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p015/cap.jpg" class="card-img" alt="Открытая почта">
+                <img src="/img/postsmin/p015.jpg" class="card-img" alt="Открытая почта">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Общение с клиентами в интернете</p>
                 </div>
@@ -49,7 +49,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/p/used-market-what-is-it-with-what-it-is-eaten" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p012/cap.jpg" class="card-img" alt="Несколько купюр денег в руке">
+                <img src="/img/postsmin/p012.jpg" class="card-img" alt="Несколько купюр денег в руке">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Б/У рынок: что это, с чем его едят?</p>
                 </div>
@@ -57,7 +57,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/games/babkaonthehuntclassic" class="card card--link card--rounded border-0">
-                <img src="/img/posts/g001/cap.jpg" class="card-img" alt="Мобильная игра Babka On The Hunt">
+                <img src="/img/postsmin/g001.jpg" class="card-img" alt="Мобильная игра Babka On The Hunt">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Babka On The Hunt</p>
                 </div>
@@ -65,7 +65,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/tech/ipad-mini-4-is-an-ambiguous-device" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p011.jpg" class="card-img" alt="Фотография айпада мини 4">
+                <img src="/img/postsmin/p011.jpg" class="card-img" alt="Фотография айпада мини 4">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">iPad mini 4 — неоднозначный девайс</p>
                 </div>
@@ -73,7 +73,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/games/rememberthesecards" class="card card--link card--rounded border-0">
-                <img src="/img/posts/g002/cap.jpg" class="card-img" alt="Мобильная игра Запомни эти карты">
+                <img src="/img/postsmin/g002.jpg" class="card-img" alt="Мобильная игра Запомни эти карты">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Запомни эти карты</p>
                 </div>
@@ -81,7 +81,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/updates/novyy-sayt-creagoo-ru" loading="lazy" class="card card--link card--rounded border-0">
-                <img src="/img/updates/creagoo.jpg" class="card-img" alt="Фотография логотипа Creagoo">
+                <img src="/img/postsmin/creagoo.jpg" class="card-img" alt="Фотография логотипа Creagoo">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Новый сайт creagoo.ru</p>
                 </div>
@@ -89,7 +89,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/tech/the-new-generation-of-the-iphone-xr-device" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p007.jpg" loading="lazy" class="card-img" alt="Телефон лежит на столе">
+                <img src="/img/postsmin/p007.jpg" loading="lazy" class="card-img" alt="Телефон лежит на столе">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Новое поколение устройства — iPhone XR</p>
                 </div>
