--- a/src/html/games/babkaonthehuntclassic/index.html
+++ b/src/html/games/babkaonthehuntclassic/index.html
@@ -74,7 +74,7 @@
             <p class="post--more-text mb-0">19.03.23 12:00</p>
         </div>
 
-        @@include('../../../parts/p--more-1.html', {
+        @@include('../../../parts/p--more-post.html', {
             "active": "g-babkaonthehuntclassic"
         })
 
