--- a/src/html/games/rockpaperscissors/index.html
+++ b/src/html/games/rockpaperscissors/index.html
@@ -72,7 +72,7 @@
             <p class="post--more-text mb-0">19.03.23 12:00</p>
         </div>
 
-        @@include('../../../parts/p--more-3.html', {
+        @@include('../../../parts/p--more-post.html', {
             "active": "g-rockpaperscissors"
         })
 
