--- a/src/html/p/how-I-fight-against-burnout/index.html
+++ b/src/html/p/how-I-fight-against-burnout/index.html
@@ -91,7 +91,7 @@
             <p class="post--more-text mb-0">02.02.23 12:00</p>
         </div>
 
-        @@include('../../../parts/p--more-1.html', {
+        @@include('../../../parts/p--more-post.html', {
         "active": "p-how-I-fight-against-burnout"
         })
 
