--- a/src/html/p/how-did-I-start-learning-programming/index.html
+++ b/src/html/p/how-did-I-start-learning-programming/index.html
@@ -108,7 +108,7 @@
             <p class="post--more-text mb-0">02.02.23 12:00</p>
         </div>
 
-        @@include('../../../parts/p--more-3.html', {
+        @@include('../../../parts/p--more-post.html', {
         "active": "p-how-did-i-start-learning-programming"
         })
 
