--- a/src/html/p/the-path-of-a-programmer-is-a-difficult-path/index.html
+++ b/src/html/p/the-path-of-a-programmer-is-a-difficult-path/index.html
@@ -137,7 +137,7 @@
             <p class="post--more-text mb-0">01.01.23 12:00</p>
         </div>
 
-        @@include('../../../parts/p--more-3.html', {
+        @@include('../../../parts/p--more-post.html', {
         "active": "p-the-path-of-a-programmer-is-a-difficult-path"
         })
 
