--- a/src/html/tech/difference-in-macbooks-for-3-years/index.html
+++ b/src/html/tech/difference-in-macbooks-for-3-years/index.html
@@ -193,7 +193,7 @@
             <p class="post--more-text mb-0">06.02.23 12:00</p>
         </div>
 
-        @@include('../../../parts/p--more-3.html', {
+        @@include('../../../parts/p--more-post.html', {
         "active": "p-the-new-generation-of-the-iphone-xr-device"
         })
 
