--- a/src/html/tech/experience-using-iphone-6s-for-six-months/index.html
+++ b/src/html/tech/experience-using-iphone-6s-for-six-months/index.html
@@ -118,7 +118,7 @@
             <p class="post--more-text mb-0">06.02.23 12:00</p>
         </div>
 
-        @@include('../../../parts/p--more-1.html', {
+        @@include('../../../parts/p--more-post.html', {
         "active": "p-experience-using-iphone-6s-for-six-months"
         })
 
