--- a/src/html/tech/macbook-2017-review/index.html
+++ b/src/html/tech/macbook-2017-review/index.html
@@ -187,7 +187,7 @@
             <p class="post--more-text mb-0">16.04.23 15:00</p>
         </div>
 
-        @@include('../../../parts/p--more-1.html', {
+        @@include('../../../parts/p--more-post.html', {
         "active": "p-experience-using-iphone-6s-for-six-months"
         })
 
