--- a/src/html/tech/macbook-pro-2014-13-review/index.html
+++ b/src/html/tech/macbook-pro-2014-13-review/index.html
@@ -283,7 +283,7 @@
             <p class="post--more-text mb-0">02.02.23 12:00</p>
         </div>
 
-        @@include('../../../parts/p--more-2.html', {
+        @@include('../../../parts/p--more-post.html', {
         "active": "p-macbook-pro-2014-13-review"
         })
 
