--- a/src/html/updates/change-creagoo-ru-simplify-improve-and-share/index.html
+++ b/src/html/updates/change-creagoo-ru-simplify-improve-and-share/index.html
@@ -107,7 +107,7 @@
             <p class="post--more-text mb-0">25.03.23 12:00</p>
         </div>
 
-        @@include('../../../parts/p--more-1.html', {
+        @@include('../../../parts/p--more-post.html', {
         "active": "u-change-creagoo-ru-simplify-improve-and-share"
         })
 
