--- a/src/html/updates/news-archive-share-design-update/index.html
+++ b/src/html/updates/news-archive-share-design-update/index.html
@@ -198,7 +198,7 @@
                 <p class="post--more-text mb-0">17.04.23 12:00</p>
             </div>
 
-            @@include('../../../parts/p--more-3.html', {
+            @@include('../../../parts/p--more-post.html', {
             "active": "p-how-did-i-start-learning-programming"
             })
         </div>
