--- a/src/html/updates/novyy-sayt-creagoo-ru/index.html
+++ b/src/html/updates/novyy-sayt-creagoo-ru/index.html
@@ -151,7 +151,7 @@
             <p class="post--more-text mb-0">19.03.23 12:00</p>
         </div>
 
-        @@include('../../../parts/p--more-1.html', {
+        @@include('../../../parts/p--more-post.html', {
             "active": "u-novyy-sayt-creagoo-ru"
         })
 
