edit use images at posts

--- a/src/parts/p--more-post.html
+++ b/src/parts/p--more-post.html
@@ -1,11 +1,11 @@
 <div class="container--more-block">
-    <div class="container container--main ">
-        <h4 class="h1 mb-3">Читайте также</h4>
+    <div class="container container--main">
+        <h4 class="h1 mb-3">Читать ещё</h4>
         <div class="row row-cols-1 row-cols-lg-2 gx-3">
 
             <div class="col pb-3 mb-sm-0">
                 <a href="/tech/macbook-2017-review" class="card card--link card--rounded border-0">
-                    <img src="/img/posts/p013/cap.jpg" class="card-img" alt="Макбук 2017 года с открытой крышкой">
+                    <img src="/img/postsmin/p013.jpg" class="card-img" alt="Макбук 2017 года с открытой крышкой">
                     <div class="card-img-overlay card--bg-gradient d-flex">
                         <p class="card-title text-white mt-auto card--title card--title-2">Обзор на макбук 2017 года</p>
                     </div>
