--- a/src/parts/p--articles.html
+++ b/src/parts/p--articles.html
@@ -2,7 +2,7 @@
     <div class="row row-cols-1 row-cols-lg-2 gx-3">
         <div class="col pb-3 mb-sm-0">
             <a href="/tech/macbook-2017-review" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p013/cap.jpg" class="card-img" alt="Макбук 2017 года с открытой крышкой">
+                <img src="/img/postsmin/p013.jpg" class="card-img" alt="Макбук 2017 года с открытой крышкой">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Обзор на макбук 2017 года</p>
                 </div>
@@ -10,7 +10,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/tech/difference-in-macbooks-for-3-years" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p017/cap.jpg" class="card-img" alt="Макбук 2017 и 2014 стоят напротив">
+                <img src="/img/postsmin/p017.jpg" class="card-img" alt="Макбук 2017 и 2014 стоят напротив">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Разница в макбуках за 3 года</p>
                 </div>
@@ -18,7 +18,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/p/how-to-sell-on-buy-markets" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p016/cap.jpg" class="card-img" alt="Портмоне на фоне ноутбука">
+                <img src="/img/postsmin/p016.jpg" class="card-img" alt="Портмоне на фоне ноутбука">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Как успешно продавать на Б/У рынках
                     </p>
@@ -27,7 +27,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/p/communication-with-clients-on-the-internet" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p015/cap.jpg" class="card-img" alt="Открытая почта">
+                <img src="/img/postsmin/p015.jpg" class="card-img" alt="Открытая почта">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Общение с клиентами в интернете</p>
                 </div>
@@ -35,7 +35,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/p/used-market-what-is-it-with-what-it-is-eaten" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p012/cap.jpg" class="card-img" alt="Несколько купюр денег в руке">
+                <img src="/img/postsmin/p012.jpg" class="card-img" alt="Несколько купюр денег в руке">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Б/У рынок: что это, с чем его едят?</p>
                 </div>
@@ -43,7 +43,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/p/the-path-of-a-programmer-is-a-difficult-path" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p001@min.jpg" class="card-img" alt="Ноутбук с открытой крышкой">
+                <img src="/img/postsmin/p001.jpg" class="card-img" alt="Ноутбук с открытой крышкой">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Путь программиста — это трудный
                         путь?</p>
@@ -53,7 +53,7 @@
         <div class="col pb-3 mb-sm-0">
             <a href="/p/project-development-history-live.creagoo.ru-its-forced-closure"
                 class="card card--link card--rounded border-0">
-                <img src="/img/posts/p003.jpg" class="card-img" alt="Фотография логотипа Creagoo">
+                <img src="/img/postsmin/p003.jpg" class="card-img" alt="Фотография логотипа Creagoo">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">История live.creagoo.ru</p>
                 </div>
@@ -62,7 +62,7 @@
         <div class="col pb-3 mb-sm-0">
             <a href="/tech/ipad-mini-4-is-an-ambiguous-device"
                 class="card card--link card--rounded border-0">
-                <img src="/img/posts/p011.jpg" class="card-img" alt="Фотография айпада мини 4">
+                <img src="/img/postsmin/p011.jpg" class="card-img" alt="Фотография айпада мини 4">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">iPad mini 4 — неоднозначный девайс</p>
                 </div>
@@ -70,7 +70,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/p/how-did-i-start-learning-programming" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p004.jpg" loading="lazy" class="card-img" alt="Фотография с кодом программиста">
+                <img src="/img/postsmin/p004.jpg" loading="lazy" class="card-img" alt="Фотография с кодом программиста">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">С чего я начал изучать
                         программирование</p>
@@ -79,7 +79,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/p/how-i-fight-against-burnout" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p005.jpg" loading="lazy" class="card-img" alt="Девушка выгорела на фотографии">
+                <img src="/img/postsmin/p005.jpg" loading="lazy" class="card-img" alt="Девушка выгорела на фотографии">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Как я борюсь против выгорания</p>
                 </div>
@@ -87,7 +87,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/p/how-i-develop-websites-in-php" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p006.jpg" loading="lazy" class="card-img" alt="Открытый код программы">
+                <img src="/img/postsmin/p006.jpg" loading="lazy" class="card-img" alt="Открытый код программы">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Как я разрабатываю сайты на PHP
                     </p>
@@ -96,7 +96,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/tech/the-new-generation-of-the-iphone-xr-device" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p007.jpg" loading="lazy" class="card-img" alt="Телефон лежит на столе">
+                <img src="/img/postsmin/p007.jpg" loading="lazy" class="card-img" alt="Телефон лежит на столе">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Новое поколение устройства —
                         iPhone XR</p>
@@ -105,7 +105,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/tech/macbook-pro-2014-13-review" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p008.jpg" loading="lazy" class="card-img" alt="Приоткрытая крышка ноутбука">
+                <img src="/img/postsmin/p008.jpg" loading="lazy" class="card-img" alt="Приоткрытая крышка ноутбука">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Macbook Pro 2014 13' — обзор</p>
                 </div>
@@ -113,7 +113,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/tech/experience-using-iphone-6s-for-six-months" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p009.jpg" loading="lazy" class="card-img" alt="Телефон снимает фотографию">
+                <img src="/img/postsmin/p009.jpg" loading="lazy" class="card-img" alt="Телефон снимает фотографию">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Опыт использования iPhone 6s</p>
                 </div>
@@ -121,7 +121,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/p/pet-project-development-what-is-it-and-for-what" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p010.jpg" loading="lazy" class="card-img" alt="Открытый код программы">
+                <img src="/img/postsmin/p010.jpg" loading="lazy" class="card-img" alt="Открытый код программы">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Разработка pet-проектов — что это
                         и для чего?</p>
@@ -138,7 +138,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/games/babkaonthehuntclassic" class="card card--link card--rounded border-0">
-                <img src="/img/posts/g001/cap.jpg" loading="lazy" class="card-img" alt="Мобильная игра Babka On The Hunt">
+                <img src="/img/postsmin/g001.jpg" loading="lazy" class="card-img" alt="Мобильная игра Babka On The Hunt">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Babka On The Hunt</p>
                 </div>
@@ -146,7 +146,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/games/sweetness" class="card card--link card--rounded border-0">
-                <img src="/img/posts/g003/cap.jpg" loading="lazy" class="card-img" alt="Мобильная игра Sweetness">
+                <img src="/img/postsmin/g003.jpg" loading="lazy" class="card-img" alt="Мобильная игра Sweetness">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Sweetness</p>
                 </div>
@@ -154,7 +154,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/games/rememberthesecards" class="card card--link card--rounded border-0">
-                <img src="/img/posts/g002/cap.jpg" loading="lazy" class="card-img" alt="Мобильная игра Запомни эти карты">
+                <img src="/img/postsmin/g002.jpg" loading="lazy" class="card-img" alt="Мобильная игра Запомни эти карты">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Запомни эти карты</p>
                 </div>
@@ -162,7 +162,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/games/rockpaperscissors" class="card card--link card--rounded border-0">
-                <img src="/img/posts/g004/cap.jpg" loading="lazy" class="card-img" alt="Мобильная игра Камень ножницы бумага">
+                <img src="/img/postsmin/g004.jpg" loading="lazy" class="card-img" alt="Мобильная игра Камень ножницы бумага">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Камень ножницы бумага</p>
                 </div>
