--- a/src/parts/p--font-size.html
+++ b/src/parts/p--font-size.html
@@ -35,10 +35,10 @@
     </div>
     <div class="fs-6">
         @@if(context.left == "true") {
-            <p id="fontsizetextedit" class="ps-3 pt-1 text-start fs-6 fontsizeedit">123</p>
+            <p id="fontsizetextedit" class="ps-3 pt-1 text-start fs-6 fontsizeedit"></p>
         }
         @@if(context.left != "true") {
-            <p id="fontsizetextedit" class="pe-3 pt-1 text-end fontsizeedit">123</p>
+            <p id="fontsizetextedit" class="pe-3 pt-1 text-end fontsizeedit"></p>
         }
     </div>
 </div>
