--- a/src/parts/p--tech.html
+++ b/src/parts/p--tech.html
@@ -2,7 +2,7 @@
     <div class="row row-cols-1 row-cols-lg-2 gx-3">
         <div class="col pb-3 mb-sm-0">
             <a href="/tech/macbook-2017-review" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p013/cap.jpg" class="card-img" alt="Макбук 2017 года с открытой крышкой">
+                <img src="/img/postsmin/p013.jpg" class="card-img" alt="Макбук 2017 года с открытой крышкой">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Обзор на макбук 2017 года</p>
                 </div>
@@ -10,7 +10,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/tech/difference-in-macbooks-for-3-years" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p017/cap.jpg" class="card-img" alt="Макбук 2017 и 2014 стоят напротив">
+                <img src="/img/postsmin/p017.jpg" class="card-img" alt="Макбук 2017 и 2014 стоят напротив">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Разница в макбуках за 3 года</p>
                 </div>
@@ -18,7 +18,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/tech/ipad-mini-4-is-an-ambiguous-device" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p011.jpg" class="card-img" alt="Фотография айпада мини 4">
+                <img src="/img/postsmin/p011.jpg" class="card-img" alt="Фотография айпада мини 4">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">iPad mini 4 — неоднозначный
                         девайс</p>
@@ -27,7 +27,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/tech/the-new-generation-of-the-iphone-xr-device" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p007.jpg" loading="lazy" class="card-img" alt="Телефон лежит на столе">
+                <img src="/img/postsmin/p007.jpg" loading="lazy" class="card-img" alt="Телефон лежит на столе">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Новое поколение устройства —
                         iPhone XR</p>
@@ -36,7 +36,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/tech/macbook-pro-2014-13-review" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p008.jpg" loading="lazy" class="card-img" alt="Приоткрытая крышка ноутбука">
+                <img src="/img/postsmin/p008.jpg" loading="lazy" class="card-img" alt="Приоткрытая крышка ноутбука">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Macbook Pro 2014 13' — обзор</p>
                 </div>
@@ -44,7 +44,7 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/tech/experience-using-iphone-6s-for-six-months" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p009.jpg" loading="lazy" class="card-img" alt="Телефон снимает фотографию">
+                <img src="/img/postsmin/p009.jpg" loading="lazy" class="card-img" alt="Телефон снимает фотографию">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Опыт использования iPhone 6s</p>
                 </div>
